# CAR

./: .gitignore  CMakeLists.txt  Cargo.toml  Config.cmake.in  README.md  build.rs  vcpkg-configuration.json  vcpkg.json
cmake/: corrosion_bridge.cmake
src/: handler.rs  lib.rs  no_op_handler.rs  record_batch_vector_reader.rs
tests/: arrow_array_stream_reader.h  rust_test.cpp  test_driver.cpp
vcpkg_registry/versions/: baseline.json
