[package]
name = "car"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-schema = "50.0.0"
anyhow = "1.0.71"
cxx = "1.0.104"

[dependencies.arrow]
version = "50.0.0"
features = ["ffi"]

[build-dependencies]
cxx-build = "1.0.104"

[lib]
crate-type = ["staticlib"]
